# Sambo

./: .gitignore  .gitmodules  ARBORESCENCE_INTERACTIVE.md  CONTRIBUTING.md  LICENSE  MISSION_ACCOMPLISHED.md  README.md  debug_model  debug_model.cpp  debug_test.md  meson.build  meson.build.backup  meson.build.new  page de test markdown.md  page de test markdown.vala  run_sambo.sh  test12.md  test13.md  test_chargement.md  test_debug.sh  test_llama  test_llama.cpp  test_loading.sh  test_markdown.md
.githooks/: pre-commit
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/copilot/: contexte.md
.github/workflows/: ci.yml
data/: com.cabineteto.Sambo.desktop.in  com.cabineteto.Sambo.gschema.xml  explorer-style.css  profile-manager-modern.css  profile-manager-simple.css  profile-manager-style.css  sambo.gresource.xml  style.css
docs/: debugging-guide.md  inference-profiles-system.md  performance-optimizations.md  prompt-display-feature.md  refactoring-improvements.md  system-prompt-management.md  workflow-guide.md
po/: meson.build
prompt/: plan-phase.md  prompt wysiwyng
scripts/: check_floating_elements.sh  check_meson_files.sh  code-checker.sh  code-fixer.sh  install_icon_and_desktop.sh  kill_llama.sh  prompt.md  release.sh  remove_debug_logs.sh  run-dev.sh  run-sambo-minimal.sh  run-sambo-quiet.sh  setup-dev.sh  verify_icon_config.sh
src/: Application.vala  CommandView.vala  HeaderBar.vala  Sidebar.vala  TextEditor.vala  sambo_llama_wrapper.c  sambo_llama_wrapper.cpp  sambo_llama_wrapper.h
src/controller/: ApplicationController.vala
src/model/: ApplicationModel.vala  ChatMessage.vala  CommunicationModel.vala  ConfigManager.vala  EditorModel.vala  ExplorerModel.vala  InferenceProfile.vala  ModelManager.vala  ZoneTransferManager.vala
src/model/configuration/: WindowStateManager.vala
src/model/document/: DocumentConverter.vala  DocumentConverterManager.vala  HtmlDocumentConverter.vala  MarkdownDocumentConverter.vala  PivotDocument.vala  PivotDocumentConverter.vala  TextDocumentConverter.vala
src/model/explorer/: BookmarksManager.vala  BreadcrumbModel.vala  ExplorerTabModel.vala  FileItemModel.vala  HistoryManager.vala  IconCache.vala  SearchService.vala  ViewMode.vala
src/model/huggingface/: HuggingFaceAPI.vala  HuggingFaceAPI_new.vala  HuggingFaceAPI_old.vala  HuggingFaceFile.vala  HuggingFaceModel.vala
src/model/performance/: PerformanceOptimizer.vala
src/view/: CommunicationView.vala  EditorView.vala  ExplorerView.vala  MainWindow.old  MainWindow.vala
src/view/dialogs/: DialogFileComparer.vala  TableEditorDialog.vala
src/view/layout/: LayoutManager.vala
src/view/widgets/: BreadcrumbWidget.vala  ChatBubbleRow.vala  ChatView.vala  ChatView_new.vala  ChatView_old.vala  ComparisonView.vala  ErrorInfoBar.vala  ExtensionFilterChips.vala  FilePreviewWidget.vala  ProfileCreationWizard.vala  ProfileEditorDialog.vala  ProfileEditorDialogNew.vala  ProfileEditorDialogOld.vala  ProfileManager.vala  TerminalView.vala  WysiwygEditor.vala  ZoneTransferButton.vala
src/view/windows/: ExplorerWindow.vala  HuggingFaceDownloadWindow.vala  HuggingFaceModelsWindow.vala  PreferencesWindow.vala  TrackingWindow.vala
subprojects/: llama.wrap
vapi/: llama.vapi
